# fictional-potato

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE.txt  README.md  comm_protocol.md  partitions.csv  sdkconfig.defaults
.metadata/: version.ini
components/applications/: CMakeLists.txt  actuation_app.c  comm_app.c  data_app.c  pluviometer_app.c  rtc_app.c
components/applications/include/: actuation_app.h  comm_app.h  data_app.h  pluviometer_app.h  rtc_app.h
components/embedded_model/: CMakeLists.txt  README.md  xgboost_error_postprocess.c
components/embedded_model/include/: xgboost_error_postprocess.h  xgboost_feature_order.h
components/http_server/: CMakeLists.txt  http_api.c  http_config_parser.c  http_storage.c
components/http_server/include/: http_api.h  http_config_parser.h  http_storage.h
components/http_server/web_page_files/: index.css  index.html
docs/: Doxyfile  README.md  legacy_cleanup.md  new_product_idp_migration.md
flash/: flash.py  install.bat  install.sh
latex/: _free_r_t_o_s__defines_8h.tex  _free_r_t_o_s__defines_8h__dep__incl.md5  actuation__app_8c.tex  actuation__app_8c__incl.md5  actuation__app_8h.tex  actuation__app_8h__dep__incl.md5  actuation__app_8h__incl.md5  comm__app_8c.tex  comm__app_8h.tex  (+82 more)
main/: CMakeLists.txt  actuation_app.c  comm_app.c  data_app.c  data_preprocessor.c  eco_mode.c  hw_test.c  main.c  ota_update.c  pluviometer.c  rush_mode.c  scheduling.c  sectorization.c  system_manager.c  system_monitoring.c
main/include/: actuation_app.h  comm_app.h  data_app.h  data_preprocessor.h  eco_mode.h  hw_test.h  ota_update.h  pluviometer.h  rush_mode.h  scheaduling.h  scheduling.h  sectorization.h  system_manager.h  system_monitoring.h
(+242 files in other folders)
