idf_component_register(SRCS
						"rtc_app.c"
						"data_app.c"
						"comm_app.c"
						"actuation_app.c"
						"pluviometer.c"
                    INCLUDE_DIRS
                    	"include"
                    PRIV_REQUIRES
                    	main 
                    	utils
                    	rtc
)
